--- a/.github/workflows/gen_whl_to_pypi_rapid_orientation.yml
+++ b/.github/workflows/gen_whl_to_pypi_rapid_orientation.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Pull latest code
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.7
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.7'
+          python-version: '3.10'
           architecture: 'x64'
 
       - name: Unit testings
@@ -31,8 +31,7 @@ jobs:
           rm rapid_orientation/models/.gitkeep
           mv $DIR_NAME/*.onnx rapid_orientation/models/
           pip install -r requirements.txt
-          cd tests
-          pytest test_orientation.py
+          pytest tests/test_orientation.py
 
   GenerateWHL_PushPyPi:
     needs: UnitTesting
@@ -41,10 +40,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python 3.7
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.7'
+          python-version: '3.10'
           architecture: 'x64'
 
       - name: Run setup
